<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="android.view.View"/>
        <import type="com.example.propertyappg11.util.Result"/>

        <variable
            name="viewModel"
            type="com.example.propertyappg11.overview.OverviewViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.propertyappg11.MainActivity"


        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:translationZ="20dp"
            android:background="?colorBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:marginTopPlusInsets="@{0f}"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways|snap">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbar_height"
                    android:padding="0dp"
                    tools:menu="@menu/fragment_overview"
                    tools:navigationIcon="@drawable/ic_drawer_menu"

                    app:navigationContentDescription="@string/navigate_up"
                    >

                    <com.example.propertyappg11.custom.SearchView
                        android:id="@+id/toolbar_searchview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:elevation="10dp"
                        android:clickable="true"
                        android:focusable="true"

                        app:hintText="@string/search_by_id"
                        app:inputText="@{viewModel.queryString}"

                        app:onSearchInputVisibility="@{(visible) -> (! visible) ? viewModel.clearQueryString() : null }"
                        app:onSearch="@{ (str) -> viewModel.updateQueryString(str) }"
                        app:titleText="@string/mars_properties"
                        app:backgroundColor="?colorBackground"

                        />

                </androidx.appcompat.widget.Toolbar>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    >

                    <HorizontalScrollView
                        android:id="@+id/chip_group_scroll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/sort_by"
                        android:scrollbars="none"
                        android:layout_marginEnd="@dimen/margin_small"
                        >
                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chip_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:paddingStart="25dp"
                            android:paddingEnd="25dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="4dp"
                            app:chipSpacing="10dp"

                            app:singleLine="true"
                            app:marsApiFilter="@={viewModel.type}"
                            app:selectionRequired="true"
                            app:singleSelection="true"

                            >

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_all"
                                style="@style/MyStyle.Widgets.Chip.Filter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"


                                android:text="@string/all"
                                tools:checked="true" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_rent"
                                style="@style/MyStyle.Widgets.Chip.Filter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/to_rent" />


                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_buy"
                                style="@style/MyStyle.Widgets.Chip.Filter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/to_buy" />
                        </com.google.android.material.chip.ChipGroup>


                    </HorizontalScrollView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sort_by"
                        style="?textInputLayoutDropdownStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        android:layout_marginEnd="@dimen/margin_very_small"
                        android:hint="Sort by"

                        >

                        <AutoCompleteTextView
                            android:id="@+id/sorting_option"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"

                            android:textAppearance="?textAppearanceSubtitle1"

                            app:marsApiSorting="@={viewModel.sortedBy}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >
            <ImageView
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:scaleType="fitXY"
                android:src="@drawable/an_loading_horizontal"
                android:translationZ="20dp"

                android:background="?colorBackground"

                app:fadeInIf="@{viewModel.status.isLoading}"
                app:tint="?colorSecondary"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photos_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:scrollbars="vertical"

                app:itemSpacing="@{@dimen/card_spacing}"
                app:columnNumber="@{@integer/columnNumber}"
                app:endSpace="@{@dimen/margin_extra_large}"

                tools:itemCount="16"
                tools:listitem="@layout/layout_item_overview"


                />


            <ImageView
                android:id="@+id/image_no_network2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"

                app:tint="?colorOnBackground"
                android:src="@drawable/ic_network_unavailable"

                android:visibility="@{viewModel.status.isError ? View.VISIBLE : View.GONE}"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/margin_extra_large"

                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="?colorOnBackground"

                android:text="No property found"
                android:visibility="@{(viewModel.status.isSuccess &amp;&amp; viewModel.properties.empty) ? View.VISIBLE : View.GONE}"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
