...
        android:name="com.example.propertyappg11.overview.OverviewFragment"
        android:label=""
        tools:layout="@layout/fragment_overview"
        >
        <action
            android:id="@+id/action_overview_to_detail"
            app:destination="@id/dest_detail" />
    </fragment>

    <fragment
        android:id="@+id/dest_detail"
        android:name="com.example.propertyappg11.detail.DetailFragment"
        tools:layout="@layout/fragment_detail">
...
